# farmhash-ffi

./: Cargo.toml  README.md  build.rs
include/: farmhash.h
src/: lib.rs
